tests/snapshots/read_verbs__requirements_member_published.snap
---
source: tests/read_verbs.rs
expression: run.stdout
---
The requirement roster (1 requirement):

  • `governance` — required, filled by 1 member(s)
      It means: "the corpus declares a governance model an architecture doc must satisfy".
      ← `45-governance` (spec)
